--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&family=Playfair+Display:wght@600&family=Raleway:wght@100;200;300;400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600&family=Montserrat:wght@200;300;400;500&family=Playfair+Display:wght@600&family=Raleway:wght@100;200;300;400&display=swap');
 
 /* To disable blank at the to of the page */
 
@@ -19,6 +19,253 @@ iframe {
     border: none;         /* Reset default border */
     height: 100vh;        /* Viewport-relative units */
     width: 100vw;
+}
+
+/*********************************************************************************/
+
+/* Grid system */
+
+@media (min-width:993px) {
+    .grid-6 {
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-rows: 1fr;
+    }
+
+    .grid-6 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-6 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .grid-6 div:nth-child(3) {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .grid-6 div:nth-child(4) {
+        grid-area: 1 / 4 / 2 / 5;
+    }
+
+    .grid-6 div:nth-child(5) {
+        grid-area: 1 / 5 / 2 / 6;
+    }
+
+    .grid-6 div:nth-child(6) {
+        grid-area: 1 / 6 / 2 / 7;
+    }
+
+    .grid-4 {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+    }
+
+    .grid-4 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-4 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .grid-4 div:nth-child(3) {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .grid-4 div:nth-child(4) {
+        grid-area: 1 / 4 / 2 / 5;
+    }
+
+    .grid-3 {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: 1fr;
+    }
+
+    .grid-3 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-3 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .grid-3 div:nth-child(3) {
+        grid-area: 1 / 3 / 2 / 4;
+    }
+
+    .grid-2 {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+    }
+
+    .grid-2 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-2 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+}
+
+@media (max-width:992px) and (min-width:691px) {
+    .grid-6 {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .grid-6 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-6 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .grid-6 div:nth-child(3) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .grid-6 div:nth-child(4) {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    .grid-6 div:nth-child(5) {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .grid-6 div:nth-child(6) {
+        grid-area: 3 / 2 / 4 / 3;
+    }
+
+    .grid-4 {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .grid-4 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-4 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .grid-4 div:nth-child(3) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .grid-4 div:nth-child(4) {
+        grid-area: 2 / 2 / 3 / 3;
+    }
+
+    .grid-3 {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+    }
+
+    .grid-3 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-3 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+
+    .grid-3 div:nth-child(3) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .grid-2 {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 1fr;
+    }
+
+    .grid-2 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-2 div:nth-child(2) {
+        grid-area: 1 / 2 / 2 / 3;
+    }
+}
+
+@media (max-width: 690px) {
+    .grid-6 {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 1fr);
+    }
+
+    .grid-6 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-6 div:nth-child(2) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .grid-6 div:nth-child(3) {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .grid-6 div:nth-child(4) {
+        grid-area: 4 / 1 / 5 / 2;
+    }
+
+    .grid-6 div:nth-child(5) {
+        grid-area: 5 / 1 / 6 / 2;
+    }
+
+    .grid-6 div:nth-child(6) {
+        grid-area: 6 / 1 / 7 / 2;
+    }
+
+    .grid-4 {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
+
+    .grid-4 div:nth-child(1) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .grid-4 div:nth-child(2) {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+
+    .grid-4 div:nth-child(3) {
+        grid-area: 4 / 1 / 5 / 2;
+    }
+
+    .grid-4 div:nth-child(4) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-3 {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    }
+
+    .grid-3 div:nth-child(1) {
+        grid-area: 1 / 1 / 2 / 2;
+    }
+
+    .grid-3 div:nth-child(2) {
+        grid-area: 2 / 1 / 3 / 2;
+    }
+
+    .grid-3 div:nth-child(3) {
+        grid-area: 3 / 1 / 4 / 2;
+    }
+}
+
+.grid {
+    display: grid;
+    grid-column-gap: 10px;
+    grid-row-gap: 50px;
+    max-width: 1500px;
+    margin: auto;
+    padding: 10px;
+    /* width:max-content */
 }
 
 /*********************************************************************************/
@@ -57,4 +304,63 @@ iframe {
 #move p {
     color: white;
     margin-bottom: 8px;
+}
+
+#websites_preview div {
+    width: 300px;
+    height: 150px;
+    overflow: hidden;
+    margin: auto;
+    border-radius: 10px;
+    box-shadow: rgba(8, 8, 8, 0.2) 0px 7px 29px 0px;
+    cursor: pointer;
+    position: relative;
+}
+
+#websites_preview p {
+    z-index: 15;
+    position: absolute;
+    bottom: 0px;
+    right: 0;
+    background: white;
+    border-radius: 5px;
+    padding: 3px;
+}
+
+#websites_preview div img {
+    width: 300px;
+    object-fit: contain;
+    object-position: 0 -0px;
+    transition: 4s;
+}
+
+#websites_preview {
+    /* background-color: red; */
+}
+
+body {
+    /* background-color: #5cb95b;
+    background-image: url("../img/back_logo.png"); */
+    background-size: 60px;
+}
+
+header h1 {
+    font-family: 'Dancing Script', sans-serif;
+    text-align: center;
+    color: rgb(54, 54, 54);
+    font-weight: 400;
+}
+
+.description {
+    max-width: 1500px;
+    margin: auto;
+    color: rgb(54, 54, 54);
+}
+
+.description p {
+    width: 700px;
+}
+
+#websites_preview {
+    padding: 30px 0px;
 }
