--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,35 @@ iframe {
 
 /*********************************************************************************/
 
+/* Page with footer at bottom */
+
+body {
+    position: relative;
+    min-height: 100vh;
+}
+
+main {
+    padding-bottom: 5.5rem;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 1.0rem;
+    padding-bottom: 1.0rem;
+    margin: 0 auto;
+    display: block;
+    text-align: center;
+    font-size: 12px;
+}
+
+/*********************************************************************************/
+
+a{
+    color: #2088ff !important;
+}
+
 #move {
     background-color: rgb(22, 22, 22);
     position: absolute;
@@ -363,4 +392,8 @@ header h1 {
 
 #websites_preview {
     padding: 30px 0px;
+}
+
+button {
+    cursor: pointer;
 }
